--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-asgiref==3.6.0
-coverage==7.2.3
+asgiref==3.3.4
 dj-database-url==0.5.0
-Django==3.2.18
-django-stubs==1.16.0
-django-stubs-ext==0.8.0
+Django==3.2.3
 gunicorn==20.1.0
-psycopg2-binary==2.9.6
-pytz==2023.3
-sqlparse==0.4.3
-types-dj-database-url==1.3.0.0
-types-pytz==2023.3.0.0
-types-PyYAML==6.0.12.9
+psycopg2==2.8.6
+python3-openid==3.2.0
+pytz==2021.1
+sqlparse==0.4.1
